# hesia

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-pages.yml  release-desktop.yml
documentations/: integrations.md  mcp.md  relay.md
public/: sw.js
public/favicon/: site.webmanifest
relay/: README.md  config-store.ts  config.example.json  hesia-tools.ts  index.ts  mcp-bridge.ts  package.json  smtp-test.ts  smtp.ts
scripts/: build-desktop.mjs  build-pages.mjs  generate-icons.mjs  hesia-relay.mjs  hesia-relay.test.mjs  inject-precache-shells.mjs  locale-migration.test.mjs  offline-routes.test.mjs  platform.test.mjs  task-inference.test.mjs  ws-lite.mjs
src/: sw.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/relay/: config.rs  mcp.rs  migrate.rs  mod.rs  smtp.rs
src/app/: globals.css  layout.tsx  manifest.ts
src/lib/: confirm.ts  toast.ts
src/prompts/: category-suggester.ts  planned-suggester.ts  report-generator.ts  system.ts  tag-suggester.ts  task-creator.ts  time-estimator.ts
src/stores/: board-store.ts  chat-store.ts  command-palette-store.ts  confirm-store.ts  settings-store.ts  toast-store.ts  ui-store.ts
src/types/: ai-actions.ts  ai-provider.ts  ai-suggestions.ts  category.ts  chat.ts  device-sync.ts  export.ts  index.ts  integration-extensions.ts  jalaali-js.d.ts  mcp.ts  report.ts  (+6 more)
terminals/: 1.txt
(+246 files in other folders)
